<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/chosenFragment"
        android:icon="@drawable/ic_chosen"
        android:title="@string/chosen" />
    <item
        android:id="@+id/responseFragment"
        android:icon="@drawable/ic_response"
        android:title="@string/response" />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_message"
        android:title="@string/message" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>