<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_16"
    android:background="@drawable/background_views">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/gap_93" />

    <TextView
        android:id="@+id/currently_viewing_tv"
        style="@style/SpecialText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/currently_viewing"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vacancy_title"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/vacancy_title"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/currently_viewing_tv" />

    <TextView
        android:id="@+id/salary_tv"
        style="@style/HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/salary"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/vacancy_title" />

    <TextView
        android:id="@+id/town_tv"
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/city"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/salary_tv" />

    <TextView
        android:id="@+id/company_name_tv"
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/company_name"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/town_tv" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:src="@drawable/ic_ok"
        app:layout_constraintBottom_toBottomOf="@id/company_name_tv"
        app:layout_constraintStart_toEndOf="@id/company_name_tv"
        app:layout_constraintTop_toTopOf="@id/company_name_tv" />

    <ImageView
        android:id="@+id/briefcase_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:src="@drawable/ic_briefcase"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/company_name_tv" />

    <TextView
        android:id="@+id/experience_tv"
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:text="@string/experience"
        app:layout_constraintBottom_toBottomOf="@id/briefcase_iv"
        app:layout_constraintStart_toEndOf="@id/briefcase_iv"
        app:layout_constraintTop_toTopOf="@id/briefcase_iv" />

    <TextView
        android:id="@+id/published_date_tv"
        style="@style/DimText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/published"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/briefcase_iv" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_21"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:backgroundTint="?attr/special_text_color"
        android:clickable="false"
        android:fontFamily="@font/sf_pro_display_font"
        android:text="@string/respond"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/published_date_tv" />

    <ImageView
        android:id="@+id/chosen_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:src="@drawable/ic_chosen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>