<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SearchFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <EditText
        android:id="@+id/search_et"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/gap_40"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_8"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/padding_4"
        android:hint="@string/hint_search"
        android:paddingStart="@dimen/padding_12"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/settings_ic"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settings_ic"
        android:layout_width="@dimen/gap_40"
        android:layout_height="@dimen/gap_40"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/background_button"
        android:clickable="false"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vacancies_et"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/gap_40"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_8"
        android:drawablePadding="@dimen/padding_4"
        android:hint="@string/hint_vacancies"
        android:paddingStart="@dimen/gap_40"
        app:layout_constraintEnd_toStartOf="@+id/settings_ic"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@+id/search_et" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="@dimen/gap_40"
        android:layout_height="@dimen/gap_40"
        android:background="@color/none"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/vacancies_et"
        app:layout_constraintStart_toStartOf="@+id/vacancies_et"
        app:layout_constraintTop_toTopOf="@+id/vacancies_et" />

    <TextView
        android:id="@+id/vacancies_tw"
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/vacancies"
        app:layout_constraintStart_toStartOf="@+id/start_line"
        app:layout_constraintTop_toBottomOf="@+id/vacancies_et" />

    <ImageView
        android:id="@+id/arrows_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:src="@drawable/ic_arrows"
        app:layout_constraintEnd_toStartOf="@+id/end_line"
        app:layout_constraintTop_toBottomOf="@+id/vacancies_et" />

    <TextView
        android:id="@+id/vacancies_link"
        style="@style/LinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginBottom="2dp"
        android:text="@string/by_compliance"
        app:layout_constraintBottom_toBottomOf="@+id/arrows_iv"
        app:layout_constraintEnd_toStartOf="@+id/arrows_iv"
        app:layout_constraintTop_toTopOf="@+id/arrows_iv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offers_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/start_line"
        app:layout_constraintTop_toBottomOf="@id/vacancies_tw"
        tools:itemCount="3"
        tools:listitem="@layout/offer_view" />

    <TextView
        android:id="@+id/header_tw"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/jobs_for_you"
        app:layout_constraintStart_toStartOf="@+id/start_line"
        app:layout_constraintTop_toBottomOf="@+id/offers_rv" />

    <Button
        android:id="@+id/show_all_vacancies_bt"
        style="@style/MainButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/gap_48"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/vacancies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_line"
        app:layout_constraintStart_toStartOf="@+id/start_line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vacancies_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/text_16"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintBottom_toTopOf="@+id/show_all_vacancies_bt"
        app:layout_constraintEnd_toStartOf="@+id/end_line"
        app:layout_constraintStart_toStartOf="@+id/start_line"
        app:layout_constraintTop_toBottomOf="@+id/header_tw"
        tools:itemCount="3"
        tools:listitem="@layout/vacancy_view" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/full_show_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="vacancies_link, arrows_iv, vacancies_tw, vacancies_et, back_button" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/preview_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="search_et, offers_rv, header_tw, show_all_vacancies_bt" />

</androidx.constraintlayout.widget.ConstraintLayout>